--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="icons/restaurant.svg" />
+    <meta name="Description" content="Tempat Menemukan Restoran Terbaik">
+    <link rel="icon" href="favicon.png" />
+    <link rel="apple-touch-icon" href="favicon.png">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -11,90 +13,11 @@
     <title>Restobook - Tempat Pencarian Restoran Terlengkap</title>
   </head>
   <body>
-    <a href="#maincontent" class="skip-link">Menuju ke konten</a>
-    <nav>
-      <div class="logo-button-container">
-        <div class="brand-logo">
-          <a href="/">
-            <img src="icons/restaurant.svg" alt="Primary Logo Website" />
-            Restobook
-          </a>
-        </div>
-        <button class="toggle-button" aria-label="Navigation Menu">
-          <img src="icons/menu-hamburger.svg" alt="Icon Menu" />
-        </button>
-      </div>
-      <div class="navbar-links">
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="#">Favorite</a></li>
-          <li>
-            <a
-              href="https://www.linkedin.com/in/galih-redha-saputra/"
-              target="__blank"
-              rel="noreferrer"
-              >About Us</a
-            >
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <a href="#mainContent" class="skip-to-main-content">Menuju ke konten</a>
+    <custom-header></custom-header>
     <main>
-      <section class="jumbotron" tabindex="0" aria-label="Gambar Jumbotron">
-        <div class="jumbotron-img">
-          <h1 tabindex="0">
-            Kemudahan dalam genggaman untuk mendapatkan pilihan restoran terbaik
-          </h1>
-        </div>
-      </section>
-      <section class="restaurant-list" id="maincontent">
-        <h2 tabindex="0">Daftar Restoran</h2>
-        <div class="restaurant-container"></div>
-      </section>
-      <section class="sponsorship">
-        <h2 tabindex="0">Didukung Oleh</h2>
-        <div class="sponsorship__container">
-          <img
-            src="sponsorship/a&w.svg"
-            alt="Logo Sponsor A&W Restaurant"
-            tabindex="0"
-          />
-          <img
-            src="sponsorship/baskin-robbins.svg"
-            alt="Logo Sponsor Baskin Robbins"
-            tabindex="0"
-          />
-          <img
-            src="sponsorship/burger-king.svg"
-            alt="Logo Sponsor Burger King"
-            tabindex="0"
-          />
-          <img
-            src="sponsorship/domino-pizza.svg"
-            alt="Logo Sponsor Domino Pizza"
-            tabindex="0"
-          />
-          <img src="sponsorship/kfc.svg" alt="Logo Sponsor KFC" tabindex="0" />
-          <img
-            src="sponsorship/pizza-hut.svg"
-            alt="Logo Sponsor Pizza Hut"
-            tabindex="0"
-          />
-          <img
-            src="sponsorship/starbucks.svg"
-            alt="Logo Sponsor Starbucks"
-            tabindex="0"
-          />
-          <img
-            src="sponsorship/walls.svg"
-            alt="Logo Sponsor Walls Ice Cream"
-            tabindex="0"
-          />
-        </div>
-      </section>
+      <custom-loading></custom-loading>
     </main>
-    <footer tabindex="0">
-      <p>Copyright © 2020 - Restobook</p>
-    </footer>
+    <custom-footer></custom-footer>
   </body>
 </html>
